--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/Nubovik01/nbvk-quotes-api/issues"
   },
-  "homepage": "https://github.com/Nubovik01/nbvk-quotes-api#readme"
+  "homepage": "https://github.com/Nubovik01/nbvk-quotes-api#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
