--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nbvk-quotes-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "api/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,5 +25,8 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@vercel/node": "^2.9.2"
   }
 }
