--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "node",
     "javascript"
   ],
-  "author": "Nubovik <nubovik01@gmail.com>",
+  "author": "Nikita A. <https://t.me/nktdev> (https://nubovik01.github.io)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Nubovik01/nbvk-quotes-api/issues"
